Fixed footer to not overlap with content on smaller screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,6 +55,7 @@ body {
 main {
     min-height: 85vh;
     padding-top: 1em;
+    padding-bottom: 6em;
 }
 
 
